manifests/00-kong-base.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
    external-dns.alpha.kubernetes.io/hostname: kong-app.sandbox.inkcloud.io,kong-app2.sandbox.inkcloud.io
  name: kong
spec:
  gatewayClassName: kong
  listeners:
    - name: proxy
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
  name: kong2
spec:
  gatewayClassName: kong
  listeners:
    - name: proxy
      port: 80
      protocol: HTTP
