manifests/01-kong-sample-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: kong/go-echo:latest
          name: echo
          ports:
            - containerPort: 1025
            - containerPort: 1026
            - containerPort: 1027
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: echo
 annotations:
  konghq.com/strip-path: 'true'
spec:
 parentRefs:
 - group: gateway.networking.k8s.io		
   kind: Gateway
   name: kong
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /echo
   backendRefs:
   - group: ''		
     kind: Service
     name: echo
     port: 1027
     weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: httproute-hostname
spec:
 parentRefs:
 - group: gateway.networking.k8s.io		
   kind: Gateway
   name: kong
 hostnames:
  - kong-app.sandbox.inkcloud.io
 rules:
 - backendRefs:
   - group: ''		
     kind: Service
     name: echo
     port: 1027
     weight: 1
---
